project/GrammarParser.py
# Generated from project/Grammar.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys

if sys.version_info[1] > 5:
    from typing import TextIO
else:
    from typing.io import TextIO




class GrammarParser(Parser):

    grammarFileName = "Grammar.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [DFA(ds, i) for i, ds in enumerate(atn.decisionToState)]

    sharedContextCache = PredictionContextCache()

    literalNames = [
        "<INVALID>",
        "'let'",
        "'is'",
        "'graph'",
        "'='",
        "'remove'",
        "'vertex'",
        "'edge'",
        "'vertices'",
        "'from'",
        "'add'",
        "'to'",
        "'['",
        "','",
        "']'",
        "'('",
        "')'",
        "'|'",
        "'^'",
        "'.'",
        "'&'",
        "'..'",
        "'return'",
        "'where'",
        "'reachable'",
        "'in'",
        "'by'",
        "'for'",
    ]

    symbolicNames = [
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "WS",
        "VAR",
        "NUM",
        "CHAR",
    ]

    RULE_prog = 0
    RULE_stmt = 1
    RULE_declare = 2
    RULE_bind = 3
    RULE_remove = 4
    RULE_add = 5
    RULE_expr = 6
    RULE_set_expr = 7
    RULE_edge_expr = 8
    RULE_regexp = 9
    RULE_range = 10
    RULE_select = 11
    RULE_v_filter = 12

    ruleNames = [
        "prog",
        "stmt",
        "declare",
        "bind",
        "remove",
        "add",
        "expr",
        "set_expr",
        "edge_expr",
        "regexp",
        "range",
        "select",
        "v_filter",
    ]

    EOF = Token.EOF
    T__0 = 1
    T__1 = 2
    T__2 = 3
    T__3 = 4
    T__4 = 5
    T__5 = 6
    T__6 = 7
    T__7 = 8
    T__8 = 9
    T__9 = 10
    T__10 = 11
    T__11 = 12
    T__12 = 13
    T__13 = 14
    T__14 = 15
    T__15 = 16
    T__16 = 17
    T__17 = 18
    T__18 = 19
    T__19 = 20
    T__20 = 21
    T__21 = 22
    T__22 = 23
    T__23 = 24
    T__24 = 25
    T__25 = 26
    T__26 = 27
    WS = 28
    VAR = 29
    NUM = 30
    CHAR = 31

    def __init__(self, input: TokenStream, output: TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(
            self, self.atn, self.decisionsToDFA, self.sharedContextCache
        )
        self._predicates = None

    class ProgContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(GrammarParser.EOF, 0)

        def stmt(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(GrammarParser.StmtContext)
            else:
                return self.getTypedRuleContext(GrammarParser.StmtContext, i)

        def getRuleIndex(self):
            return GrammarParser.RULE_prog

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterProg"):
                listener.enterProg(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitProg"):
                listener.exitProg(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitProg"):
                return visitor.visitProg(self)
            else:
                return visitor.visitChildren(self)

    def prog(self):

        localctx = GrammarParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 29
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while ((_la) & ~0x3F) == 0 and ((1 << _la) & 1058) != 0:
                self.state = 26
                self.stmt()
                self.state = 31
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 32
            self.match(GrammarParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StmtContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def bind(self):
            return self.getTypedRuleContext(GrammarParser.BindContext, 0)

        def add(self):
            return self.getTypedRuleContext(GrammarParser.AddContext, 0)

        def remove(self):
            return self.getTypedRuleContext(GrammarParser.RemoveContext, 0)

        def declare(self):
            return self.getTypedRuleContext(GrammarParser.DeclareContext, 0)

        def getRuleIndex(self):
            return GrammarParser.RULE_stmt

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterStmt"):
                listener.enterStmt(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitStmt"):
                listener.exitStmt(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitStmt"):
                return visitor.visitStmt(self)
            else:
                return visitor.visitChildren(self)

    def stmt(self):

        localctx = GrammarParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_stmt)
        try:
            self.state = 38
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input, 1, self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 34
                self.bind()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 35
                self.add()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 36
                self.remove()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 37
                self.declare()
                pass

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DeclareContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(GrammarParser.VAR, 0)

        def getRuleIndex(self):
            return GrammarParser.RULE_declare

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterDeclare"):
                listener.enterDeclare(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitDeclare"):
                listener.exitDeclare(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitDeclare"):
                return visitor.visitDeclare(self)
            else:
                return visitor.visitChildren(self)

    def declare(self):

        localctx = GrammarParser.DeclareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_declare)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 40
            self.match(GrammarParser.T__0)
            self.state = 41
            self.match(GrammarParser.VAR)
            self.state = 42
            self.match(GrammarParser.T__1)
            self.state = 43
            self.match(GrammarParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BindContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(GrammarParser.VAR, 0)

        def expr(self):
            return self.getTypedRuleContext(GrammarParser.ExprContext, 0)

        def getRuleIndex(self):
            return GrammarParser.RULE_bind

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterBind"):
                listener.enterBind(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitBind"):
                listener.exitBind(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitBind"):
                return visitor.visitBind(self)
            else:
                return visitor.visitChildren(self)

    def bind(self):

        localctx = GrammarParser.BindContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_bind)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 45
            self.match(GrammarParser.T__0)
            self.state = 46
            self.match(GrammarParser.VAR)
            self.state = 47
            self.match(GrammarParser.T__3)
            self.state = 48
            self.expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class RemoveContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(GrammarParser.ExprContext, 0)

        def VAR(self):
            return self.getToken(GrammarParser.VAR, 0)

        def getRuleIndex(self):
            return GrammarParser.RULE_remove

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterRemove"):
                listener.enterRemove(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitRemove"):
                listener.exitRemove(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitRemove"):
                return visitor.visitRemove(self)
            else:
                return visitor.visitChildren(self)

    def remove(self):

        localctx = GrammarParser.RemoveContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_remove)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 50
            self.match(GrammarParser.T__4)
            self.state = 51
            _la = self._input.LA(1)
            if not ((((_la) & ~0x3F) == 0 and ((1 << _la) & 448) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 52
            self.expr()
            self.state = 53
            self.match(GrammarParser.T__8)
            self.state = 54
            self.match(GrammarParser.VAR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AddContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(GrammarParser.ExprContext, 0)

        def VAR(self):
            return self.getToken(GrammarParser.VAR, 0)

        def getRuleIndex(self):
            return GrammarParser.RULE_add

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterAdd"):
                listener.enterAdd(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitAdd"):
                listener.exitAdd(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitAdd"):
                return visitor.visitAdd(self)
            else:
                return visitor.visitChildren(self)

    def add(self):

        localctx = GrammarParser.AddContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_add)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 56
            self.match(GrammarParser.T__9)
            self.state = 57
            _la = self._input.LA(1)
            if not (_la == 6 or _la == 7):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 58
            self.expr()
            self.state = 59
            self.match(GrammarParser.T__10)
            self.state = 60
            self.match(GrammarParser.VAR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExprContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUM(self):
            return self.getToken(GrammarParser.NUM, 0)

        def CHAR(self):
            return self.getToken(GrammarParser.CHAR, 0)

        def VAR(self):
            return self.getToken(GrammarParser.VAR, 0)

        def edge_expr(self):
            return self.getTypedRuleContext(GrammarParser.Edge_exprContext, 0)

        def set_expr(self):
            return self.getTypedRuleContext(GrammarParser.Set_exprContext, 0)

        def regexp(self):
            return self.getTypedRuleContext(GrammarParser.RegexpContext, 0)

        def select(self):
            return self.getTypedRuleContext(GrammarParser.SelectContext, 0)

        def getRuleIndex(self):
            return GrammarParser.RULE_expr

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterExpr"):
                listener.enterExpr(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitExpr"):
                listener.exitExpr(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitExpr"):
                return visitor.visitExpr(self)
            else:
                return visitor.visitChildren(self)

    def expr(self):

        localctx = GrammarParser.ExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_expr)
        try:
            self.state = 69
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input, 2, self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 62
                self.match(GrammarParser.NUM)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 63
                self.match(GrammarParser.CHAR)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 64
                self.match(GrammarParser.VAR)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 65
                self.edge_expr()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 66
                self.set_expr()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 67
                self.regexp(0)
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 68
                self.select()
                pass

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Set_exprContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(GrammarParser.ExprContext)
            else:
                return self.getTypedRuleContext(GrammarParser.ExprContext, i)

        def getRuleIndex(self):
            return GrammarParser.RULE_set_expr

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterSet_expr"):
                listener.enterSet_expr(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitSet_expr"):
                listener.exitSet_expr(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitSet_expr"):
                return visitor.visitSet_expr(self)
            else:
                return visitor.visitChildren(self)

    def set_expr(self):

        localctx = GrammarParser.Set_exprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_set_expr)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            self.match(GrammarParser.T__11)
            self.state = 72
            self.expr()
            self.state = 77
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la == 13:
                self.state = 73
                self.match(GrammarParser.T__12)
                self.state = 74
                self.expr()
                self.state = 79
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 80
            self.match(GrammarParser.T__13)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Edge_exprContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(GrammarParser.ExprContext)
            else:
                return self.getTypedRuleContext(GrammarParser.ExprContext, i)

        def getRuleIndex(self):
            return GrammarParser.RULE_edge_expr

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterEdge_expr"):
                listener.enterEdge_expr(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitEdge_expr"):
                listener.exitEdge_expr(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitEdge_expr"):
                return visitor.visitEdge_expr(self)
            else:
                return visitor.visitChildren(self)

    def edge_expr(self):

        localctx = GrammarParser.Edge_exprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_edge_expr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            self.match(GrammarParser.T__14)
            self.state = 83
            self.expr()
            self.state = 84
            self.match(GrammarParser.T__12)
            self.state = 85
            self.expr()
            self.state = 86
            self.match(GrammarParser.T__12)
            self.state = 87
            self.expr()
            self.state = 88
            self.match(GrammarParser.T__15)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class RegexpContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CHAR(self):
            return self.getToken(GrammarParser.CHAR, 0)

        def VAR(self):
            return self.getToken(GrammarParser.VAR, 0)

        def regexp(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(GrammarParser.RegexpContext)
            else:
                return self.getTypedRuleContext(GrammarParser.RegexpContext, i)

        def range_(self):
            return self.getTypedRuleContext(GrammarParser.RangeContext, 0)

        def getRuleIndex(self):
            return GrammarParser.RULE_regexp

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterRegexp"):
                listener.enterRegexp(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitRegexp"):
                listener.exitRegexp(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitRegexp"):
                return visitor.visitRegexp(self)
            else:
                return visitor.visitChildren(self)

    def regexp(self, _p: int = 0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = GrammarParser.RegexpContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 18
        self.enterRecursionRule(localctx, 18, self.RULE_regexp, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [31]:
                self.state = 91
                self.match(GrammarParser.CHAR)
                pass
            elif token in [29]:
                self.state = 92
                self.match(GrammarParser.VAR)
                pass
            elif token in [15]:
                self.state = 93
                self.match(GrammarParser.T__14)
                self.state = 94
                self.regexp(0)
                self.state = 95
                self.match(GrammarParser.T__15)
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 113
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input, 6, self._ctx)
            while _alt != 2 and _alt != ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 111
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input, 5, self._ctx)
                    if la_ == 1:
                        localctx = GrammarParser.RegexpContext(
                            self, _parentctx, _parentState
                        )
                        self.pushNewRecursionContext(
                            localctx, _startState, self.RULE_regexp
                        )
                        self.state = 99
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException

                            raise FailedPredicateException(
                                self, "self.precpred(self._ctx, 4)"
                            )
                        self.state = 100
                        self.match(GrammarParser.T__16)
                        self.state = 101
                        self.regexp(5)
                        pass

                    elif la_ == 2:
                        localctx = GrammarParser.RegexpContext(
                            self, _parentctx, _parentState
                        )
                        self.pushNewRecursionContext(
                            localctx, _startState, self.RULE_regexp
                        )
                        self.state = 102
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException

                            raise FailedPredicateException(
                                self, "self.precpred(self._ctx, 2)"
                            )
                        self.state = 103
                        self.match(GrammarParser.T__18)
                        self.state = 104
                        self.regexp(3)
                        pass

                    elif la_ == 3:
                        localctx = GrammarParser.RegexpContext(
                            self, _parentctx, _parentState
                        )
                        self.pushNewRecursionContext(
                            localctx, _startState, self.RULE_regexp
                        )
                        self.state = 105
                        if not self.precpred(self._ctx, 1):
                            from antlr4.error.Errors import FailedPredicateException

                            raise FailedPredicateException(
                                self, "self.precpred(self._ctx, 1)"
                            )
                        self.state = 106
                        self.match(GrammarParser.T__19)
                        self.state = 107
                        self.regexp(2)
                        pass

                    elif la_ == 4:
                        localctx = GrammarParser.RegexpContext(
                            self, _parentctx, _parentState
                        )
                        self.pushNewRecursionContext(
                            localctx, _startState, self.RULE_regexp
                        )
                        self.state = 108
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException

                            raise FailedPredicateException(
                                self, "self.precpred(self._ctx, 3)"
                            )
                        self.state = 109
                        self.match(GrammarParser.T__17)
                        self.state = 110
                        self.range_()
                        pass

                self.state = 115
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input, 6, self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class RangeContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUM(self, i: int = None):
            if i is None:
                return self.getTokens(GrammarParser.NUM)
            else:
                return self.getToken(GrammarParser.NUM, i)

        def getRuleIndex(self):
            return GrammarParser.RULE_range

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterRange"):
                listener.enterRange(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitRange"):
                listener.exitRange(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitRange"):
                return visitor.visitRange(self)
            else:
                return visitor.visitChildren(self)

    def range_(self):

        localctx = GrammarParser.RangeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_range)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            self.match(GrammarParser.T__11)
            self.state = 117
            self.match(GrammarParser.NUM)
            self.state = 122
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == 21:
                self.state = 118
                self.match(GrammarParser.T__20)
                self.state = 120
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la == 30:
                    self.state = 119
                    self.match(GrammarParser.NUM)

            self.state = 124
            self.match(GrammarParser.T__13)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SelectContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self, i: int = None):
            if i is None:
                return self.getTokens(GrammarParser.VAR)
            else:
                return self.getToken(GrammarParser.VAR, i)

        def expr(self):
            return self.getTypedRuleContext(GrammarParser.ExprContext, 0)

        def v_filter(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(GrammarParser.V_filterContext)
            else:
                return self.getTypedRuleContext(GrammarParser.V_filterContext, i)

        def getRuleIndex(self):
            return GrammarParser.RULE_select

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterSelect"):
                listener.enterSelect(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitSelect"):
                listener.exitSelect(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitSelect"):
                return visitor.visitSelect(self)
            else:
                return visitor.visitChildren(self)

    def select(self):

        localctx = GrammarParser.SelectContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_select)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input, 9, self._ctx)
            if la_ == 1:
                self.state = 126
                self.v_filter()

            self.state = 130
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == 27:
                self.state = 129
                self.v_filter()

            self.state = 132
            self.match(GrammarParser.T__21)
            self.state = 133
            self.match(GrammarParser.VAR)
            self.state = 136
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == 13:
                self.state = 134
                self.match(GrammarParser.T__12)
                self.state = 135
                self.match(GrammarParser.VAR)

            self.state = 138
            self.match(GrammarParser.T__22)
            self.state = 139
            self.match(GrammarParser.VAR)
            self.state = 140
            self.match(GrammarParser.T__23)
            self.state = 141
            self.match(GrammarParser.T__8)
            self.state = 142
            self.match(GrammarParser.VAR)
            self.state = 143
            self.match(GrammarParser.T__24)
            self.state = 144
            self.match(GrammarParser.VAR)
            self.state = 145
            self.match(GrammarParser.T__25)
            self.state = 146
            self.expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class V_filterContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(GrammarParser.VAR, 0)

        def expr(self):
            return self.getTypedRuleContext(GrammarParser.ExprContext, 0)

        def getRuleIndex(self):
            return GrammarParser.RULE_v_filter

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterV_filter"):
                listener.enterV_filter(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitV_filter"):
                listener.exitV_filter(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitV_filter"):
                return visitor.visitV_filter(self)
            else:
                return visitor.visitChildren(self)

    def v_filter(self):

        localctx = GrammarParser.V_filterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_v_filter)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 148
            self.match(GrammarParser.T__26)
            self.state = 149
            self.match(GrammarParser.VAR)
            self.state = 150
            self.match(GrammarParser.T__24)
            self.state = 151
            self.expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    def sempred(self, localctx: RuleContext, ruleIndex: int, predIndex: int):
        if self._predicates == None:
            self._predicates = dict()
        self._predicates[9] = self.regexp_sempred
        pred = self._predicates.get(ruleIndex, None)
        if pred is None:
            raise Exception("No predicate with index:" + str(ruleIndex))
        else:
            return pred(localctx, predIndex)

    def regexp_sempred(self, localctx: RegexpContext, predIndex: int):
        if predIndex == 0:
            return self.precpred(self._ctx, 4)

        if predIndex == 1:
            return self.precpred(self._ctx, 2)

        if predIndex == 2:
            return self.precpred(self._ctx, 1)

        if predIndex == 3:
            return self.precpred(self._ctx, 3)
